# web-diagnostics-orchestration

./: .gitignore  README.md  agent.py  agent_taxonomy.json  credentials.json  deploy.sh  main.py  pyproject.toml
app/: .env  __init__.py  config.py  main.py  models.py  orchestrator.py
app/agents/: __init__.py  agent.py  analytics_agent.py  answer_agent.py  ga4_agent.py  mock_run.py  orchestrator_agent.py  planner.py  seo_agent.py
app/services/: __init__.py  ga4_service.py  llm_service.py  seo_gsheet_service.py
